feat: added fonts and reorganized structure

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <title>Joshua's Portfolio</title>
     <link rel="stylesheet" href="/bundle.css" />
   </head>
-  <body></body>
+  <body>
+    <h1></h1>
+  </body>
 </html>
