feat: added docker file and build script

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@ title: Joshua Hegedus
     <br/><br/>
     I’m also passionate about teaching and sharing knowledge. I regularly write articles and contribute to open source
     projects to help others grow in their programming journey.
-    You’ll find a few highlighted projects below, and even more on my <a href="/resume">resume</a> or <a
-        href="https://github.com/joshika39">GitHub</a> profile.
+    You’ll find a few highlighted projects below, and even more on my <a href="https://github.com/joshika39">GitHub</a>
+    profile.
 </p>
 
 <h2>Open Source Projects</h2>
@@ -56,7 +56,7 @@ title: Joshua Hegedus
 <ul>
     <li>
         <strong>Software Developer</strong> – <a href="https://sportograf.com">Sportograf GmbH & Co. KG</a>
-        (Part-time)<br/>
+        (Full-time)<br/>
         <em>Nov 2023 – Present · Remote (Germany)</em><br/>
         <span class="tech-badge blue">React</span>
         <span class="tech-badge blue">TypeScript</span>
