feat: added styles and fonts improvements

--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,19 @@ title: Joshua Hegedus
     </li>
 </ul>
 
+<h2>Contributions</h2>
+<ul>
+    <li>
+        <a href="https://github.com/ppy/osu">osu!</a> – Contributed to the <code>osu!</code> game client, focusing on improving the look to be more in line with the website.
+    </li>
+    <li>
+        <a href="https://github.com/Floorp-Projects/web">Floorp Website</a> - Contributed to the <code>Floorp</code> browser's website, enhancing its design and functionality.
+    </li>
+    <li>
+        <a href="https://github.com/NationalSecurityAgency/skills-service">Skills Service</a> – Contributed to the <code>Skills Service</code>, a project by the National Security Agency.
+    </li>
+</ul>
+
 <h2>Work Experience</h2>
 <ul>
     <li>
@@ -150,7 +163,3 @@ title: Joshua Hegedus
     <li>Serbian (conversational)</li>
     <li>Japanese (conversational)</li>
 </ul>
-
-<h3>Want to know more?</h3>
-
-<p><a href="/about/">Read more about my background and story →</a></p>
