feat: linked raw page and resume on the site

--- a/src/index.html
+++ b/src/index.html
@@ -163,3 +163,8 @@ title: Joshua Hegedus
     <li>Serbian (conversational)</li>
     <li>Japanese (conversational)</li>
 </ul>
+
+<p>Go to <code><a href="/resume.txt">/resume.txt</a></code> to the raw resume.</p>
+
+<p>Download the PDF version from
+    <a href="/assets/files/joshika39-resume.pdf">here</a>.
