feat: added more projects and did some fixes

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,10 @@ title: Joshua Hegedus
 <h2>Open Source Projects</h2>
 <ul>
     <li>
+        <a href="https://github.com/joshika39/nextjs-toolkit">nextjs-toolkit</a> – a set of components and styles for a
+        Next.js project.
+    </li>
+    <li>
         <a href="https://github.com/kougen/dotnet-core">dotnet-core</a> – a NuGet package for making your life with .NET
         Core easier.
     </li>
@@ -35,6 +39,10 @@ title: Joshua Hegedus
         principles to manage repositories and data.
     </li>
     <li>
+        <a href="https://github.com/kougen/py-advanced-selector">py-advanced-selector</a> – a Python package that
+        provides a CLI selection wrapper for python projects.
+    </li>
+    <li>
         <a href="https://github.com/kougen/minecraft-mods">minecraft-mods</a>
         <span class="project-tag">[archived]</span> – a tool for downloading and managing pre-made Minecraft mods sets.
     </li>
@@ -49,6 +57,11 @@ title: Joshua Hegedus
     <li>
         <a href="https://github.com/kougen/eslint-plugin-clean-code">eslint-plugin-clean-code</a> – an ESLint plugin for
         enforcing clean code principles in JavaScript projects.
+    </li>
+    <li>
+        <a href="https://github.com/joshika39/japanese-cinema">japanese-cinema</a>
+        <span class="project-tag">[unmaintained]</span> – a ThreeJS 3D experience in a Japanese cinema to view the
+        airing trailers in 2020.
     </li>
 </ul>
 
