feat: added sms-automation-backend

--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,11 @@ title: Joshua Hegedus
         <span class="project-tag">[unmaintained]</span> – a ThreeJS 3D experience in a Japanese cinema to view the
         airing trailers in 2020.
     </li>
+    <li>
+        <a href="https://github.com/kougen/sms-automation-backend">sms-automation-backend</a>
+        <span class="project-tag">[unmaintained]</span> – a FastAPI backend for automating SMS sending
+        and receiving.
+    </li>
 </ul>
 
 <h2>Contributions</h2>
