feat: slowly adding more projects

--- a/src/index.html
+++ b/src/index.html
@@ -68,6 +68,9 @@ title: Joshua Hegedus
         <span class="project-tag">[unmaintained]</span> – a FastAPI backend for automating SMS sending
         and receiving.
     </li>
+    <li>
+        <a href="https://github.com/kougen/email-signer-frontend">email-signer-frontend</a> - a Next.js project, that serves as a client for the <code>email-signer-api</code>.
+    </li>
 </ul>
 
 <h2>Contributions</h2>
