feat: added missing projects and formatted the md and html files

--- a/src/index.html
+++ b/src/index.html
@@ -69,20 +69,32 @@ title: Joshua Hegedus
         and receiving.
     </li>
     <li>
-        <a href="https://github.com/kougen/email-signer-frontend">email-signer-frontend</a> - a Next.js project, that serves as a client for the <code>email-signer-api</code>.
+        <a href="https://github.com/kougen/email-signer-frontend">email-signer-frontend</a> - a Next.js project, that
+        serves as a client for the <code>email-signer-api</code>.
     </li>
+    <li>
+        <a href="https://github.com/kougen/email-signer-api">email-signer-api</a> - a FastAPI backend for sending RSA
+        signed
+        emails from a template. This project is being rewritten in <code>C#</code> for better reliability, scalability,
+        and it's being
+        extended as a marketing platform that combines more channels (Email, SMS, etc.) together. That project will
+        combine
+        the functionalities of the last 2 repositories including this.
 </ul>
 
 <h2>Contributions</h2>
 <ul>
     <li>
-        <a href="https://github.com/ppy/osu">osu!</a> – Contributed to the <code>osu!</code> game client, focusing on improving the look to be more in line with the website.
+        <a href="https://github.com/ppy/osu">osu!</a> – Contributed to the <code>osu!</code> game client, focusing on
+        improving the look to be more in line with the website.
     </li>
     <li>
-        <a href="https://github.com/Floorp-Projects/web">Floorp Website</a> - Contributed to the <code>Floorp</code> browser's website, enhancing its design and functionality.
+        <a href="https://github.com/Floorp-Projects/web">Floorp Website</a> - Contributed to the <code>Floorp</code>
+        browser's website, enhancing its design and functionality.
     </li>
     <li>
-        <a href="https://github.com/NationalSecurityAgency/skills-service">Skills Service</a> – Contributed to the <code>Skills Service</code>, a project by the National Security Agency.
+        <a href="https://github.com/NationalSecurityAgency/skills-service">Skills Service</a> – Contributed to the
+        <code>Skills Service</code>, a project by the National Security Agency.
     </li>
 </ul>
 
