feat: fixed the xpericad position

--- a/src/index.html
+++ b/src/index.html
@@ -4,200 +4,233 @@ title: Joshua Hegedus
 ---
 
 <h1>Hey there,</h1>
-<img src="assets/images/joshika39-profile-banner.png" alt="Joshua Hegedus"/>
+<img src="assets/images/joshika39-profile-banner.png" alt="Joshua Hegedus" />
 <p>
-    I'm Joshua (<em>joshika39</em>), a software engineer based in Budapest. I enjoy working across a broad spectrum of
-    technologies — from desktop and web development to IoT, the Apple ecosystem, and game engines like Unity, Unreal,
-    and Godot.
-    <br/><br/>
-    I’m also passionate about teaching and sharing knowledge. I regularly write articles and contribute to open source
-    projects to help others grow in their programming journey.
-    You’ll find a few highlighted projects below, and even more on my <a href="https://github.com/joshika39">GitHub</a>
-    profile.
+  I'm Joshua (<em>joshika39</em>), a software engineer based in Budapest. I
+  enjoy working across a broad spectrum of technologies — from desktop and web
+  development to IoT, the Apple ecosystem, and game engines like Unity, Unreal,
+  and Godot.
+  <br /><br />
+  I’m also passionate about teaching and sharing knowledge. I regularly write
+  articles and contribute to open source projects to help others grow in their
+  programming journey. You’ll find a few highlighted projects below, and even
+  more on my <a href="https://github.com/joshika39">GitHub</a>
+  profile.
 </p>
 
 <h2>Open Source Projects</h2>
 <ul>
-    <li>
-        <a href="https://github.com/joshika39/nextjs-toolkit">nextjs-toolkit</a> – a set of components and styles for a
-        Next.js project.
-    </li>
-    <li>
-        <a href="https://github.com/kougen/dotnet-core">dotnet-core</a> – a NuGet package for making your life with .NET
-        Core easier.
-    </li>
-    <li>
-        <a href="https://github.com/kougen/dotnet-game-framework">dotnet-game-framework</a> – framework for easily
-        building 2D board games with WPF, MAUI and Forms.
-    </li>
-    <li>
-        <a href="https://github.com/kougen/jsonservice">jsonservice</a> – a Python package for managing JSON data
-        easily.
-    </li>
-    <li>
-        <a href="https://github.com/kougen/py-repositories">py-repositories</a> – a Python package using SOLID
-        principles to manage repositories and data.
-    </li>
-    <li>
-        <a href="https://github.com/kougen/py-advanced-selector">py-advanced-selector</a> – a Python package that
-        provides a CLI selection wrapper for python projects.
-    </li>
-    <li>
-        <a href="https://github.com/kougen/minecraft-mods">minecraft-mods</a>
-        <span class="project-tag">[archived]</span> – a tool for downloading and managing pre-made Minecraft mods sets.
-    </li>
-    <li>
-        <a href="https://github.com/kougen/sms-automation-backend">sms-automation-backend</a>
-        <span class="project-tag">[unmaintained]</span> – a FastAPI backend for automating SMS sending and receiving.
-    </li>
-    <li>
-        <a href="https://github.com/kougen/printable-flashcard-generator">printable-flashcard-generator</a> – a tool for
-        generating printable flashcards from images and words.
-    </li>
-    <li>
-        <a href="https://github.com/kougen/eslint-plugin-clean-code">eslint-plugin-clean-code</a> – an ESLint plugin for
-        enforcing clean code principles in JavaScript projects.
-    </li>
-    <li>
-        <a href="https://github.com/joshika39/japanese-cinema">japanese-cinema</a>
-        <span class="project-tag">[unmaintained]</span> – a ThreeJS 3D experience in a Japanese cinema to view the
-        airing trailers in 2020.
-    </li>
-    <li>
-        <a href="https://github.com/kougen/sms-automation-backend">sms-automation-backend</a>
-        <span class="project-tag">[unmaintained]</span> – a FastAPI backend for automating SMS sending
-        and receiving.
-    </li>
-    <li>
-        <a href="https://github.com/kougen/email-signer-frontend">email-signer-frontend</a> - a Next.js project, that
-        serves as a client for the <code>email-signer-api</code>.
-    </li>
-    <li>
-        <a href="https://github.com/kougen/email-signer-api">email-signer-api</a> - a FastAPI backend for sending RSA
-        signed
-        emails from a template. This project is being rewritten in <code>C#</code> for better reliability, scalability,
-        and it's being
-        extended as a marketing platform that combines more channels (Email, SMS, etc.) together. That project will
-        combine
-        the functionalities of the last 2 repositories including this.
+  <li>
+    <a href="https://github.com/joshika39/nextjs-toolkit">nextjs-toolkit</a> – a
+    set of components and styles for a Next.js project.
+  </li>
+  <li>
+    <a href="https://github.com/kougen/dotnet-core">dotnet-core</a> – a NuGet
+    package for making your life with .NET Core easier.
+  </li>
+  <li>
+    <a href="https://github.com/kougen/dotnet-game-framework"
+      >dotnet-game-framework</a
+    >
+    – framework for easily building 2D board games with WPF, MAUI and Forms.
+  </li>
+  <li>
+    <a href="https://github.com/kougen/jsonservice">jsonservice</a> – a Python
+    package for managing JSON data easily.
+  </li>
+  <li>
+    <a href="https://github.com/kougen/py-repositories">py-repositories</a> – a
+    Python package using SOLID principles to manage repositories and data.
+  </li>
+  <li>
+    <a href="https://github.com/kougen/py-advanced-selector"
+      >py-advanced-selector</a
+    >
+    – a Python package that provides a CLI selection wrapper for python
+    projects.
+  </li>
+  <li>
+    <a href="https://github.com/kougen/minecraft-mods">minecraft-mods</a>
+    <span class="project-tag">[archived]</span> – a tool for downloading and
+    managing pre-made Minecraft mods sets.
+  </li>
+  <li>
+    <a href="https://github.com/kougen/sms-automation-backend"
+      >sms-automation-backend</a
+    >
+    <span class="project-tag">[unmaintained]</span> – a FastAPI backend for
+    automating SMS sending and receiving.
+  </li>
+  <li>
+    <a href="https://github.com/kougen/printable-flashcard-generator"
+      >printable-flashcard-generator</a
+    >
+    – a tool for generating printable flashcards from images and words.
+  </li>
+  <li>
+    <a href="https://github.com/kougen/eslint-plugin-clean-code"
+      >eslint-plugin-clean-code</a
+    >
+    – an ESLint plugin for enforcing clean code principles in JavaScript
+    projects.
+  </li>
+  <li>
+    <a href="https://github.com/joshika39/japanese-cinema">japanese-cinema</a>
+    <span class="project-tag">[unmaintained]</span> – a ThreeJS 3D experience in
+    a Japanese cinema to view the airing trailers in 2020.
+  </li>
+  <li>
+    <a href="https://github.com/kougen/sms-automation-backend"
+      >sms-automation-backend</a
+    >
+    <span class="project-tag">[unmaintained]</span> – a FastAPI backend for
+    automating SMS sending and receiving.
+  </li>
+  <li>
+    <a href="https://github.com/kougen/email-signer-frontend"
+      >email-signer-frontend</a
+    >
+    - a Next.js project, that serves as a client for the
+    <code>email-signer-api</code>.
+  </li>
+  <li>
+    <a href="https://github.com/kougen/email-signer-api">email-signer-api</a> -
+    a FastAPI backend for sending RSA signed emails from a template. This
+    project is being rewritten in <code>C#</code> for better reliability,
+    scalability, and it's being extended as a marketing platform that combines
+    more channels (Email, SMS, etc.) together. That project will combine the
+    functionalities of the last 2 repositories including this.
+  </li>
 </ul>
 
 <h2>Contributions</h2>
 <ul>
-    <li>
-        <a href="https://github.com/ppy/osu">osu!</a> – Contributed to the <code>osu!</code> game client, focusing on
-        improving the look to be more in line with the website.
-    </li>
-    <li>
-        <a href="https://github.com/Floorp-Projects/web">Floorp Website</a> - Contributed to the <code>Floorp</code>
-        browser's website, enhancing its design and functionality.
-    </li>
-    <li>
-        <a href="https://github.com/NationalSecurityAgency/skills-service">Skills Service</a> – Contributed to the
-        <code>Skills Service</code>, a project by the National Security Agency.
-    </li>
+  <li>
+    <a href="https://github.com/ppy/osu">osu!</a> – Contributed to the
+    <code>osu!</code> game client, focusing on improving the look to be more in
+    line with the website.
+  </li>
+  <li>
+    <a href="https://github.com/Floorp-Projects/web">Floorp Website</a> -
+    Contributed to the <code>Floorp</code>
+    browser's website, enhancing its design and functionality.
+  </li>
+  <li>
+    <a href="https://github.com/NationalSecurityAgency/skills-service"
+      >Skills Service</a
+    >
+    – Contributed to the <code>Skills Service</code>, a project by the National
+    Security Agency.
+  </li>
 </ul>
 
 <h2>Work Experience</h2>
 <ul>
-    <li>
-        <strong>Software Developer</strong> – <a href="https://sportograf.com">Sportograf GmbH & Co. KG</a>
-        (Full-time)<br/>
-        <em>Nov 2023 – Present · Remote (Germany)</em><br/>
-        <span class="tech-badge blue">React</span>
-        <span class="tech-badge blue">TypeScript</span>
-        <span class="tech-badge cyan">GitLab</span>
-        <span class="tech-badge cyan">CI/CD</span>
-        <span class="tech-badge cyan">Web Development</span>
-        <span class="tech-badge orange">AWS</span>
-        <span class="tech-badge red">Amplify</span>
-        <span class="tech-badge orange">AWS Lambda</span>
-        <span class="tech-badge green">AWS S3</span>
-        <span class="tech-badge pink">AWS CloudFront</span>
-        <span class="tech-badge blue">AWS DynamoDB</span>
-        <span class="tech-badge purple">Elixir</span>
-    </li>
+  <li>
+    <strong>Software Developer</strong> –
+    <a href="https://sportograf.com">Sportograf GmbH & Co. KG</a>
+    (Full-time)<br />
+    <em>Nov 2023 – Present · Remote (Germany)</em><br />
+    <span class="tech-badge blue">React</span>
+    <span class="tech-badge blue">TypeScript</span>
+    <span class="tech-badge cyan">GitLab</span>
+    <span class="tech-badge cyan">CI/CD</span>
+    <span class="tech-badge cyan">Web Development</span>
+    <span class="tech-badge orange">AWS</span>
+    <span class="tech-badge red">Amplify</span>
+    <span class="tech-badge orange">AWS Lambda</span>
+    <span class="tech-badge green">AWS S3</span>
+    <span class="tech-badge pink">AWS CloudFront</span>
+    <span class="tech-badge blue">AWS DynamoDB</span>
+    <span class="tech-badge purple">Elixir</span>
+  </li>
 
-    <li>
-        <strong>Software Developer</strong> – XperiCAD Kft. (Contract)<br/>
-        <em>Jun 2021 – Present · Remote (Hungary)</em><br/>
-        <span class="tech-badge purple">WPF</span>
-        <span class="tech-badge purple">.NET</span>
-        <span class="tech-badge cyan">MVVM</span>
-        <span class="tech-badge orange">Git</span>
-        <span class="tech-badge green">C#</span>
-    </li>
+  <li>
+    <strong>Software Developer</strong> – XperiCAD Kft. (Contract)<br />
+    <em>Jun 2021 – Dec 2024 · Remote (Hungary)</em><br />
+    <span class="tech-badge purple">WPF</span>
+    <span class="tech-badge purple">.NET</span>
+    <span class="tech-badge cyan">MVVM</span>
+    <span class="tech-badge orange">Git</span>
+    <span class="tech-badge green">C#</span>
+  </li>
 
-    <li>
-        <strong>Software Developer</strong> – DXC Technology (Contract)<br/>
-        <em>May 2023 – Dec 2023 · Hungary</em><br/>
-        <span class="tech-badge blue">Python</span>
-        <span class="tech-badge cyan">Software Documentation</span>
-        <span class="tech-badge red">NestJS</span>
-        <span class="tech-badge blue">Azure</span>
-        <span class="tech-badge purple">Kubernetes</span>
-    </li>
+  <li>
+    <strong>Software Developer</strong> – DXC Technology (Contract)<br />
+    <em>May 2023 – Dec 2023 · Hungary</em><br />
+    <span class="tech-badge blue">Python</span>
+    <span class="tech-badge cyan">Software Documentation</span>
+    <span class="tech-badge red">NestJS</span>
+    <span class="tech-badge blue">Azure</span>
+    <span class="tech-badge purple">Kubernetes</span>
+  </li>
 
-    <li>
-        <strong>Head Instructor</strong> – Logiscool Ltd. (Full-time)<br/>
-        <em>Oct 2019 – Aug 2023 · On-site (Serbia)</em><br/>
-        <span class="tech-badge blue">Python</span>
-        <span class="tech-badge orange">Scratch</span>
-        <span class="tech-badge cyan">Game Design</span>
-        <span class="tech-badge cyan">Classroom Instruction</span>
-    </li>
+  <li>
+    <strong>Head Instructor</strong> – Logiscool Ltd. (Full-time)<br />
+    <em>Oct 2019 – Aug 2023 · On-site (Serbia)</em><br />
+    <span class="tech-badge blue">Python</span>
+    <span class="tech-badge orange">Scratch</span>
+    <span class="tech-badge cyan">Game Design</span>
+    <span class="tech-badge cyan">Classroom Instruction</span>
+  </li>
 
-    <li>
-        <strong>Intern</strong> – JUSOFT Hungary Ltd. (Internship)<br/>
-        <em>May 2016 – Sep 2016 · On-site (Serbia)</em><br/>
-        <span class="tech-badge purple">.NET</span>
-        <span class="tech-badge cyan">SQL</span>
-        <span class="tech-badge cyan">Databases</span>
-        <span class="tech-badge green">C#</span>
-        <span class="tech-badge purple">Maui</span>
-        <span class="tech-badge blue">UWP</span>
-    </li>
+  <li>
+    <strong>Intern</strong> – JUSOFT Hungary Ltd. (Internship)<br />
+    <em>May 2016 – Sep 2016 · On-site (Serbia)</em><br />
+    <span class="tech-badge purple">.NET</span>
+    <span class="tech-badge cyan">SQL</span>
+    <span class="tech-badge cyan">Databases</span>
+    <span class="tech-badge green">C#</span>
+    <span class="tech-badge purple">Maui</span>
+    <span class="tech-badge blue">UWP</span>
+  </li>
 </ul>
 
 <h2>Education</h2>
 <ul>
-    <li>
-        <strong>Bachelor's Degree in Computer Science</strong> – Eötvös Loránd University<br/>
-        <em>Sep 2022 – Aug 2025 · Budapest, Hungary</em><br/>
-        <span class="tech-badge red">Angular</span>
-        <span class="tech-badge cyan">Web Engineering</span>
-        <span class="tech-badge blue">Java</span>
-        <span class="tech-badge cyan">SQL</span>
-        <span class="tech-badge cyan">Data Structures</span>
-        <span class="tech-badge cyan">Algorithms</span>
-        <span class="tech-badge cyan">Software Engineering</span>
-        <span class="tech-badge cyan">Computer Networks</span>
-        <span class="tech-badge cyan">Operating Systems</span>
-        <span class="tech-badge cyan">Computer Architecture</span>
-        <span class="tech-badge cyan">Database Systems</span>
-    </li>
+  <li>
+    <strong>Bachelor's Degree in Computer Science</strong> – Eötvös Loránd
+    University<br />
+    <em>Sep 2022 – Aug 2025 · Budapest, Hungary</em><br />
+    <span class="tech-badge red">Angular</span>
+    <span class="tech-badge cyan">Web Engineering</span>
+    <span class="tech-badge blue">Java</span>
+    <span class="tech-badge cyan">SQL</span>
+    <span class="tech-badge cyan">Data Structures</span>
+    <span class="tech-badge cyan">Algorithms</span>
+    <span class="tech-badge cyan">Software Engineering</span>
+    <span class="tech-badge cyan">Computer Networks</span>
+    <span class="tech-badge cyan">Operating Systems</span>
+    <span class="tech-badge cyan">Computer Architecture</span>
+    <span class="tech-badge cyan">Database Systems</span>
+  </li>
 
-    <li>
-        <strong>High School Diploma in Computer Science</strong> – Bolyai Tehetséggondozó Gimnázium és Kollégium<br/>
-        <em>Sep 2018 – Jul 2022 · Zenta, Serbia</em><br/>
-        <span class="tech-badge cyan">Databases</span>
-        <span class="tech-badge cyan">Web Engineering</span>
-        <span class="tech-badge orange">HTML</span>
-        <span class="tech-badge purple">C++</span>
-        <span class="tech-badge cyan">Networking</span>
-        <span class="tech-badge cyan">Software Basics</span>
-    </li>
+  <li>
+    <strong>High School Diploma in Computer Science</strong> – Bolyai
+    Tehetséggondozó Gimnázium és Kollégium<br />
+    <em>Sep 2018 – Jul 2022 · Zenta, Serbia</em><br />
+    <span class="tech-badge cyan">Databases</span>
+    <span class="tech-badge cyan">Web Engineering</span>
+    <span class="tech-badge orange">HTML</span>
+    <span class="tech-badge purple">C++</span>
+    <span class="tech-badge cyan">Networking</span>
+    <span class="tech-badge cyan">Software Basics</span>
+  </li>
 </ul>
 
 <h2>Languages</h2>
 <ul>
-    <li>Hungarian (Native)</li>
-    <li>English (Fluent)</li>
-    <li>Serbian (conversational)</li>
-    <li>Japanese (conversational)</li>
+  <li>Hungarian (Native)</li>
+  <li>English (Fluent)</li>
+  <li>Serbian (conversational)</li>
+  <li>Japanese (conversational)</li>
 </ul>
 
-<p>Go to <code><a href="/resume.txt">/resume.txt</a></code> to the raw resume.</p>
+<p>
+  Go to <code><a href="/resume.txt">/resume.txt</a></code> to the raw resume.
+</p>
 
-<p>Download the PDF version from
-    <a href="/assets/files/joshika39-resume.pdf">here</a>.
+<p>
+  Download the PDF version from
+  <a href="/assets/files/joshika39-resume.pdf">here</a>.
+</p>
