minor fixes in the html

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@ title: Joshua Hegedus
     <a href="https://github.com/kougen/dotnet-game-framework"
       >dotnet-game-framework</a
     >
-    – framework for easily building 2D board games with WPF, MAUI and Forms.
+    – framework for easily building 2D board games with WPF, MAUI, and Forms.
   </li>
   <li>
     <a href="https://github.com/kougen/jsonservice">jsonservice</a> – a Python
@@ -90,7 +90,7 @@ title: Joshua Hegedus
     <a href="https://github.com/kougen/email-signer-frontend"
       >email-signer-frontend</a
     >
-    - a Next.js project, that serves as a client for the
+    — a Next.js project, that serves as a client for the
     <code>email-signer-api</code>.
   </li>
   <li>
@@ -98,20 +98,20 @@ title: Joshua Hegedus
     a FastAPI backend for sending RSA signed emails from a template. This
     project is being rewritten in <code>C#</code> for better reliability,
     scalability, and it's being extended as a marketing platform that combines
-    more channels (Email, SMS, etc.) together. That project will combine the
-    functionalities of the last 2 repositories including this.
+    more channels (Email, SMS, etc.). That project will combine the
+    functionalities of the last two repositories, including this.
   </li>
 </ul>
 
 <h2>Contributions</h2>
 <ul>
   <li>
-    <a href="https://github.com/ppy/osu">osu!</a> – Contributed to the
+    <a href="https://github.com/ppy/osu">osu!</a> — Contributed to the
     <code>osu!</code> game client, focusing on improving the look to be more in
     line with the website.
   </li>
   <li>
-    <a href="https://github.com/Floorp-Projects/web">Floorp Website</a> -
+    <a href="https://github.com/Floorp-Projects/web">Floorp Website</a> –
     Contributed to the <code>Floorp</code>
     browser's website, enhancing its design and functionality.
   </li>
@@ -227,7 +227,7 @@ title: Joshua Hegedus
 </ul>
 
 <p>
-  Go to <code><a href="/resume.txt">/resume.txt</a></code> to the raw resume.
+  Go to <code><a href="/resume.txt">/resume.txt</a></code> to the raw résumé.
 </p>
 
 <p>
