--- a/src/index.html
+++ b/src/index.html
@@ -3,20 +3,10 @@ layout: layouts/base.html
 title: Joshua Hegedus
 ---
 
+<img src="assets/images/joshika39-profile-banner.png" alt="Joshua Hegedus"/>
 <h1>Hey there,</h1>
-<img src="assets/images/joshika39-profile-banner.png" alt="Joshua Hegedus" />
-<p>
-  I'm Joshua (<em>joshika39</em>), a software engineer based in Budapest. I
-  enjoy working across a broad spectrum of technologies — from desktop and web
-  development to IoT, the Apple ecosystem, and game engines like Unity, Unreal,
-  and Godot.
-  <br /><br />
-  I’m also passionate about teaching and sharing knowledge. I regularly write
-  articles and contribute to open source projects to help others grow in their
-  programming journey. You’ll find a few highlighted projects below, and even
-  more on my <a href="https://github.com/joshika39">GitHub</a>
-  profile.
-</p>
+<p>I'm Joshua (<em>joshika39</em>), a software engineer based in Budapest.</p>
+<p>I like photography too. Check out my <a href="/photography">selection</a>.</p>
 
 <h2>Open Source Projects</h2>
 <ul>
@@ -29,9 +19,7 @@ title: Joshua Hegedus
     package for making your life with .NET Core easier.
   </li>
   <li>
-    <a href="https://github.com/kougen/dotnet-game-framework"
-      >dotnet-game-framework</a
-    >
+    <a href="https://github.com/kougen/dotnet-game-framework">dotnet-game-framework</a>
     – framework for easily building 2D board games with WPF, MAUI, and Forms.
   </li>
   <li>
@@ -44,7 +32,7 @@ title: Joshua Hegedus
   </li>
   <li>
     <a href="https://github.com/kougen/py-advanced-selector"
-      >py-advanced-selector</a
+    >py-advanced-selector</a
     >
     – a Python package that provides a CLI selection wrapper for python
     projects.
@@ -56,20 +44,20 @@ title: Joshua Hegedus
   </li>
   <li>
     <a href="https://github.com/kougen/sms-automation-backend"
-      >sms-automation-backend</a
+    >sms-automation-backend</a
     >
     <span class="project-tag">[unmaintained]</span> – a FastAPI backend for
     automating SMS sending and receiving.
   </li>
   <li>
     <a href="https://github.com/kougen/printable-flashcard-generator"
-      >printable-flashcard-generator</a
+    >printable-flashcard-generator</a
     >
     – a tool for generating printable flashcards from images and words.
   </li>
   <li>
     <a href="https://github.com/kougen/eslint-plugin-clean-code"
-      >eslint-plugin-clean-code</a
+    >eslint-plugin-clean-code</a
     >
     – an ESLint plugin for enforcing clean code principles in JavaScript
     projects.
@@ -81,14 +69,14 @@ title: Joshua Hegedus
   </li>
   <li>
     <a href="https://github.com/kougen/sms-automation-backend"
-      >sms-automation-backend</a
+    >sms-automation-backend</a
     >
     <span class="project-tag">[unmaintained]</span> – a FastAPI backend for
     automating SMS sending and receiving.
   </li>
   <li>
     <a href="https://github.com/kougen/email-signer-frontend"
-      >email-signer-frontend</a
+    >email-signer-frontend</a
     >
     — a Next.js project, that serves as a client for the
     <code>email-signer-api</code>.
@@ -117,7 +105,7 @@ title: Joshua Hegedus
   </li>
   <li>
     <a href="https://github.com/NationalSecurityAgency/skills-service"
-      >Skills Service</a
+    >Skills Service</a
     >
     – Contributed to the <code>Skills Service</code>, a project by the National
     Security Agency.
@@ -129,8 +117,8 @@ title: Joshua Hegedus
   <li>
     <strong>Software Developer</strong> –
     <a href="https://sportograf.com">Sportograf GmbH & Co. KG</a>
-    (Full-time)<br />
-    <em>Nov 2023 – Present · Remote (Germany)</em><br />
+    (Full-time)<br/>
+    <em>Nov 2023 – Present · Remote (Germany)</em><br/>
     <span class="tech-badge blue">React</span>
     <span class="tech-badge blue">TypeScript</span>
     <span class="tech-badge cyan">GitLab</span>
@@ -146,8 +134,8 @@ title: Joshua Hegedus
   </li>
 
   <li>
-    <strong>Software Developer</strong> – XperiCAD Kft. (Contract)<br />
-    <em>Jun 2021 – Dec 2024 · Remote (Hungary)</em><br />
+    <strong>Software Developer</strong> – XperiCAD Kft. (Contract)<br/>
+    <em>Jun 2021 – Dec 2024 · Remote (Hungary)</em><br/>
     <span class="tech-badge purple">WPF</span>
     <span class="tech-badge purple">.NET</span>
     <span class="tech-badge cyan">MVVM</span>
@@ -156,8 +144,8 @@ title: Joshua Hegedus
   </li>
 
   <li>
-    <strong>Software Developer</strong> – DXC Technology (Contract)<br />
-    <em>May 2023 – Dec 2023 · Hungary</em><br />
+    <strong>Software Developer</strong> – DXC Technology (Contract)<br/>
+    <em>May 2023 – Dec 2023 · Hungary</em><br/>
     <span class="tech-badge blue">Python</span>
     <span class="tech-badge cyan">Software Documentation</span>
     <span class="tech-badge red">NestJS</span>
@@ -166,8 +154,8 @@ title: Joshua Hegedus
   </li>
 
   <li>
-    <strong>Head Instructor</strong> – Logiscool Ltd. (Full-time)<br />
-    <em>Oct 2019 – Aug 2023 · On-site (Serbia)</em><br />
+    <strong>Head Instructor</strong> – Logiscool Ltd. (Full-time)<br/>
+    <em>Oct 2019 – Aug 2023 · On-site (Serbia)</em><br/>
     <span class="tech-badge blue">Python</span>
     <span class="tech-badge orange">Scratch</span>
     <span class="tech-badge cyan">Game Design</span>
@@ -175,8 +163,8 @@ title: Joshua Hegedus
   </li>
 
   <li>
-    <strong>Intern</strong> – JUSOFT Hungary Ltd. (Internship)<br />
-    <em>May 2016 – Sep 2016 · On-site (Serbia)</em><br />
+    <strong>Intern</strong> – JUSOFT Hungary Ltd. (Internship)<br/>
+    <em>May 2016 – Sep 2016 · On-site (Serbia)</em><br/>
     <span class="tech-badge purple">.NET</span>
     <span class="tech-badge cyan">SQL</span>
     <span class="tech-badge cyan">Databases</span>
@@ -190,8 +178,8 @@ title: Joshua Hegedus
 <ul>
   <li>
     <strong>Bachelor's Degree in Computer Science</strong> – Eötvös Loránd
-    University<br />
-    <em>Sep 2022 – Aug 2025 · Budapest, Hungary</em><br />
+    University<br/>
+    <em>Sep 2022 – Aug 2025 · Budapest, Hungary</em><br/>
     <span class="tech-badge red">Angular</span>
     <span class="tech-badge cyan">Web Engineering</span>
     <span class="tech-badge blue">Java</span>
@@ -207,8 +195,8 @@ title: Joshua Hegedus
 
   <li>
     <strong>High School Diploma in Computer Science</strong> – Bolyai
-    Tehetséggondozó Gimnázium és Kollégium<br />
-    <em>Sep 2018 – Jul 2022 · Zenta, Serbia</em><br />
+    Tehetséggondozó Gimnázium és Kollégium<br/>
+    <em>Sep 2018 – Jul 2022 · Zenta, Serbia</em><br/>
     <span class="tech-badge cyan">Databases</span>
     <span class="tech-badge cyan">Web Engineering</span>
     <span class="tech-badge orange">HTML</span>
