--- a/src/photography.html
+++ b/src/photography.html
@@ -7,7 +7,4 @@ title: Joshua Hegedus
 <link rel="stylesheet" href="/assets/css/photography.css">
 <h1>joshika39's Photography</h1>
 <p>Welcome to my photography page! Here are some of my favorite shots:</p>
-<ul id="photography-gallery">
-
-</ul>
-<p>Feel free to reach out if you'd like to discuss photography or collaborate!</p>
+<ul id="photography-gallery"></ul>
