added full photo preview

--- a/src/photography.html
+++ b/src/photography.html
@@ -8,3 +8,5 @@ title: Joshua Hegedus
 <h1>joshika39's Photography</h1>
 <p>Welcome to my photography page! Here are some of my favorite shots:</p>
 <ul id="photography-gallery"></ul>
+<div id="photo-modal">
+</div>
