added more images and wallpapers

--- a/src/photography.html
+++ b/src/photography.html
@@ -3,6 +3,7 @@ layout: layouts/base.html
 title: Joshua Hegedus
 ---
 
+<script src="/assets/js/exif-parser-0.1.12.min.js"></script>
 <script type="module" src="/assets/js/photography.js"></script>
 <link rel="stylesheet" href="/assets/css/photography.css">
 <h1>joshika39's Photography</h1>
