added exif data to images

--- a/src/photography.html
+++ b/src/photography.html
@@ -8,6 +8,15 @@ title: Joshua Hegedus
 <link rel="stylesheet" href="/assets/css/photography.css">
 <h1>joshika39's Photography</h1>
 <p>Welcome to my photography page! Here are some of my favorite shots:</p>
-<ul id="photography-gallery"></ul>
+<div class="gallery">
+  <h2 class="gallery-title">Photos</h2>
+  <ul id="photography-gallery">
+  </ul>
+</div>
+<div class="gallery">
+  <h2 class="gallery-title">Digital Creations</h2>
+  <ul id="illustrations-gallery">
+  </ul>
+</div>
 <div id="photo-modal">
 </div>
